# async-python-sprint-5

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
src/: .env  main.py
src/api/: base.py
src/core/: config.py
src/db/: db.py
src/migrations/: env.py
src/migrations/versions/: 75d4eca4ec3c_02_users_unique.py  906213b15e6e_02_files_foreighn_key.py  983ac0cd9518_02_files_schemas.py  ae2aa16912d0_01_initial_db.py
src/models/: models.py
src/schemas/: files.py
src/services/: base.py  files.py
src/string/some/: main.py
src/users/: manager.py
